date style changes. fix side wobble with images on mobile

--- a/assets/sass/_formatting.scss
+++ b/assets/sass/_formatting.scss
@@ -1,5 +1,11 @@
+@import "_variables.scss";
+
 .italic {
     font-style: italic;
+}
+
+.published-date {
+    color: $gray;
 }
 
 .posts {
