--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -26,10 +26,34 @@
     }
 }
 
+.post-img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    img {
+        max-width: 100%;
+    }    
+
+    ul {
+        padding-inline-start: 0;
+    }
+
+    li {
+        list-style-type: none;
+    }
+}
+
 @media only screen and (max-width: $mobile-breakpoint) {
     .posts {
         .tags {
             float: none;
+        }
+    }
+
+    .post-img {
+        img {
+            max-width: 100%;
         }
     }
 }
