--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,2 +1,4 @@
 $mobile-breakpoint: 767px;
 $font-stack: 'Lora', serif;
+
+$gray: #708090;
